--- a/Biblioteca/templates/EditorialEditar.html
+++ b/Biblioteca/templates/EditorialEditar.html
@@ -37,6 +37,11 @@
                             <label class="control-label">Sitio Web</label>
                             {{form.sitioweb}}
                         </div>
+                          <div class="form-group label-floating">
+                            <label class="control-label">Seleccionar Libros de la editorial</label>
+                            {{form.libros}}
+                            
+                        </div>
                         <div class="form-group label-floating">
                             <label class="control-label">Imagen de la editorial</label>
                             {{form.imagen}}
