--- a/templates/baseAdmin.html
+++ b/templates/baseAdmin.html
@@ -119,8 +119,11 @@
                     </a>
                     <div class="collapse" id="Estudiantes">
                         <ul class="nav">
+                              <li>
+                                <a  href="{% url 'lista_libro'%}">Lista de Libros</a>
+                            </li>
                             <li>
-                                <a href="#">Crear Libro</a>
+                                <a href="{% url 'libro_create' %}">Crear Libro</a>
                             </li>
                             
                             
