--- a/Biblioteca/templates/libro_confirm_delete.html
+++ b/Biblioteca/templates/libro_confirm_delete.html
@@ -6,36 +6,36 @@
     <div class="col-md-12">
         <div class="card">
             <div class="card-content text-center">
-                <h5>¿Esta seguro de eliminar la editorial ?</h5>
+                <h5>¿Esta seguro de eliminar el libro ?</h5>
                 <div class="table-responsive">
                     <table class="table">
                         <thead>
                             <tr>
                                 <th class="text-center">#</th>
-                                <th>NIT</th>
-                                <th>nombre</th>
-                                <th>direccion</th>
-                                <th>telefono </th>
-                                <th>email </th>
-                                <th>sitio web</th>
+                                <th>titulo</th>
+                                <th>autor</th>
+                                <th>categoria</th>
+                              
+                                <th>paginas </th>
+                                <th>fragmento</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td class="text-center">{{object.pk}}</td>
-                                <td>{{object.nit}}</td>
-                                <td>{{object.nombre}}</td>
-                                <td>{{object.direccion}}</td>
-                                <td>{{object.telefono}}</td>
-                                <td>{{object.email}}</td>
-                                <td>{{object.sitioweb}}</td>
+                                <td>{{object.titulo}}</td>
+                                <td>{{object.autor}}</td>
+                                <td>{{object.categoria}}</td>
+                                
+                                <td>{{object.paginas}}</td>
+                                <td>{{object.fragmento}}</td>
                             </tr>
                             
                         </tbody>
                     </table>
                 </div>
                 <input type="submit" class='btn btn-danger btn-fill' value = "Eliminar" onclick="demo.showSwal('success-message')"  >
-                <a class='btn btn-warning btn-fill' href="{% url 'lista_editorial' %}">Cancelar</a>
+                <a class='btn btn-warning btn-fill' href="{% url 'lista_libro' %}">Cancelar</a>
             </div>
         </div>
     </div>
