--- a/templates/baseAdmin.html
+++ b/templates/baseAdmin.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Adminpro</title>
+    <title>BibliotecaUNIMAR</title>
     <base href="/">
     <link rel="apple-touch-icon" sizes="76x76" href="{% static '/img/apple-icon.png' %}" />
     <link rel="icon" type="image/png" href="{% static '/img/favicon.png' %}" />
@@ -119,7 +119,7 @@
                     </a>
                     <div class="collapse" id="Estudiantes">
                         <ul class="nav">
-                              <li>
+                            <li>
                                 <a  href="{% url 'lista_libro'%}">Lista de Libros</a>
                             </li>
                             <li>
@@ -183,9 +183,9 @@
                 
             </div>
             
-         
+            
         </div>
-     
+        
     </div>
     
     <!--Plugin-->
@@ -317,7 +317,7 @@
         });
     </script>
     
-  
+    
     
 </body>
 
